# foi-o

./: .gitignore  .gitleaksignore  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  LICENSE.md  Makefile  README.md  SECURITY.md  VERSIONING.md  basedpyright-baseline.json  conductor-feature-radar.yaml  foi-o-nz-history.bundle  issue-creation-ledger.json  issue-dry-run.json  pixi.toml  prompt-traceability.yaml  pyproject.toml  requirements.yaml  technology-radar.yaml  workspace-audit.md  workspace.lock.yaml
.github/: dependabot.yml  pull_request_template.md
adr/: 0001-standalone-repo.md  0002-process-profile-before-ontology.md  0003-observed-inferred-asserted-certified.md  0004-human-certification-boundary.md  0005-mojo-max-python-bridge.md  0006-extend-existing-surfaces.md  0007-four-axis-label-governance.md  0008-multidimensional-evidence.md  0009-bitemporal-source-packs.md  0010-nz-mver-before-scaled-comparison.md  0011-global-namespace-and-profile-versioning.md
capabilities/: registry.yaml
codebooks/: README.md
conductor/: cross-repo-issue-map.yaml  github.md  history.md  index.md  jurisdiction-completion-map.yaml  product-guidelines.md  product.md  tech-stack.md  tracks.md  vcs.md  workflow.md
contexts/: foi-o-nz.context.jsonld
contracts/: v1-baseline-reference.yaml  v2-empirical-overlay.yaml
docs/: 00-repo-charter.md  01-foundations-register.md  02-system-architecture.md  03-process-profile.md  04-agent-boundaries.md  05-data-governance.md  06-legal-versioning.md  07-evaluation-plan.md  08-roadmap.md  09-backlog.md  10-mojo-max-strategy.md  11-implementation-status.md  12-pasted-mojo-notes-review.md  13-implementation-delta-v0.2.md  14-implementation-delta-v0.3.md  15-implementation-delta-v0.4.md  16-implementation-delta-v0.5.md  17-implementation-delta-v0.6.md  17-implementation-delta-v0.7.md  18-implementation-delta-v0.8.md  19-release-readiness-evidence.md  20-corpus-profile-goldset.md  21-local-max-inference.md  21-psc-reporting-profile.md  22-semantic-alignment.md  23-methods-paper.md  23-release-package.md  24-ontology-claims-register.md  24-ontology-methods-evidence-inventory.md  24-ontology-methods-protocol.md  24-ontology-source-register.md  24-ontology-terminology-crosswalk.md  24-schema-ontology-coverage-matrix.md  25-generated-asset-index.md  25-ontology-results-discussion.md  25-validation-coverage-summary.md  26-journal-target-requirements.md  27-submission-manuscript.md  28-submission-supplement.md  29-publication-quality-panel.md  (+19 more)
examples/: agent-action.search-plan.json  agent-pack.12345.json  annotation-task.review.json  arxiv-readiness.manuscript-local.json  arxiv-readiness.manuscript-planned.json  attestation.local.json  cas-manifest.examples.json  chunk-record.request.json  core-event.deadline-calculated.json  core-event.extension-notified.json  dataset-metadata.examples.json  diff-report.modified.json  embedding-record.request.json  empirical-taskset-manifest.nz-first.json  event-evaluation.summary.json  event-timeline.small.json  events.psc-report-sample.jsonl  generated-asset-manifest.foi-o-publication.json  goldset-item.request.json  goldset-task.risk.json  goldset-task.state-mapping.json  graph-export.foi-o-evidence-network.json  graph-export.small.json  guardrail-replay.empty.json  kernel-conformance.fallback.json  kernel-manifest.static.json  kernel-readiness.fallback.json  ledger-entry.chunk.json  lineage-graph.examples.json  maturation-summary.ontology-maturation.json  mcp-bundle.small.json  mojo-audit.static.json  native-kernel-status.fallback.json  nz-public-holidays-2026.govt-nz.json  oci-layout-summary.local.json  ontology-quality-report.json  process-advice.12345.json  process-mining-conformance.fixture.json  process-mining-events.fixture.jsonl  process-mining.fixture.ocel.json  (+25 more)
integration/: existing-surface-map.yaml
mappings/: alaveteli-state-map.yaml  nz-legislation-sources.yaml  nz-oia-applicability-interval-candidates.yaml  nz-oia-version-index.yaml  nz-source-rights-registry.yaml  psc-oia-statistics-profile.yaml
migrations/: v0.8-to-v1.0.md  v1-to-v2-empirical-overlay.md
mojo/: cli.mojo
ontology/: foi-o-nz.ttl
operations/: access-policy.yaml
pipelines/: README.md
process_models/: foi-o-nz-core.bpmn  foi-o-nz-core.pnml  foi-o-nz-state-machine.bpmn  foi-o-nz-state-machine.mmd  foi-o-nz-state-machine.pnml
profiles/: capability-maturity.yaml  jurisdiction-pack-template.yaml  registry.yaml  roadmap.yaml
prompts/: extract-events.prompt.md  map-state.prompt.md
registries/: ontology-namespace-migration.yaml  ontology-registry-ledger.md  ontology-registry-ledger.yaml  ontology-registry-plan.yaml
rules/: __init__.py  differential_test.py  run_fixtures.py
scripts/: bootstrap_github_repo.sh  build_analyst_fixture_packet.py  build_australian_blinded_packets.py  build_submission_latex.py  (+30 more)
(+960 files in other folders)
